--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="description" content="this is an example for a portfolio " />
+    <meta name="author" content="done by jisna davis as apart of project" />
+    <meta name="keyword" content="html java .net ambition experience" />
+    <title>portfolio</title>
   </head>
   <body>
     <div id="app"></div>
