--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="this is an example for a portfolio " />
     <meta name="author" content="done by jisna davis as apart of project" />
     <meta name="keyword" content="html java .net ambition experience" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Calligraffitti&family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@1,500&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>portfolio</title>
   </head>
   <body>
