--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+    <script
+      src="https://kit.fontawesome.com/e6d3988496.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
